# phonopy-vibspec

./: .bumpversion.cfg  DOCUMENTATION.md  Makefile  README.md  pyproject.toml  release_it.sh
.github/workflows/: tests.yml
phonopy_vibspec/: __init__.py  phonons_analyzer.py  phonopy_phonons_analyzer.py  phonopy_results.py  spectra.py  vesta.py
phonopy_vibspec/scripts/: __init__.py  displaced_geometries.py  gather_raman.py  mode_analysis.py  prepare_raman.py  spectrum_ir.py  spectrum_raman.py  vesta_modes.py
tests/: conftest.py  test_tmp.py  test_vibspec.py  tests.py
tests/tests_files/CaO/: BORN  force_constants.hdf5  phonopy_disp.yaml
tests/tests_files/SiO2/: force_constants.hdf5  phonopy.yaml  phonopy_disp.yaml
tests/tests_files/SiO2/calc_dielectrics/: raman.hdf5
tests/tests_files/SiO2/calc_dielectrics/dielec_0004_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0006_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0009_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0010_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0011_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0011_02/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0015_02/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0016_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0017_01/: vasprun.xml
tests/tests_files/SiO2/calc_dielectrics/dielec_0017_02/: vasprun.xml
tests/tests_files/SiO2_supercell/: BORN  force_constants.hdf5  phonopy_disp.yaml
(+22 files in other folders)
